outputs/workspace_output_1755843870_5379.txt
  File "<string>", line 11
    (&quot;, &quot;.join(platforms))
     ^
SyntaxError: f-string: invalid syntax
